@@ -89,7 +89,6 @@ pod/8/urpmi.pod
 pod/8/urpmi.addmedia.pod
 pod/5/urpmi.cfg.pod
 pod/5/urpmi.files.pod
-pod/8/urpmi.recover.pod
 pod/8/urpmi.removemedia.pod
 pod/8/urpmi.update.pod
 pod/8/urpmihowto.pod
@@ -482,7 +481,6 @@ urpmf
 urpmi
 urpmi.addmedia
 urpmi.bash-completion
-urpmi.recover
 urpmi.removemedia
 urpmi.schema
 urpmi.update
