@@ -133,4 +133,4 @@ Francois Pons, Rafael Garcia-Suarez
 =head1 SEE ALSO
 
 urpmi.addmedia(8), urpmi.update(8), urpmi.removemedia(8), urpmf(8),
-urpmi(8), urpmq(8), urpmi.files(5), urpmi.recover(8).
+urpmi(8), urpmq(8), urpmi.files(5).
