@@ -546,7 +546,7 @@ FranE<ccedil>ois Pons, Rafael Garcia-Suarez
 =head1 SEE ALSO
 
 urpmi.addmedia(8), urpmi.update(8), urpmi.removemedia(8), urpme(8),
-urpmf(8), urpmq(8), urpmi.cfg(5), urpmi.files(5), urpmi.recover(8).
+urpmf(8), urpmq(8), urpmi.cfg(5), urpmi.files(5).
 
 =cut
 
