@@ -303,84 +303,6 @@ Run the urpmi command : for example, to install "package_name" :
 
 =back
 
-=head1 urpmi.recover
-
-urpmi.recover is a tool to help management of RPM rollbacks. One rarely
-used feature of RPM is that it can "repackage" the RPMs it deinstalls
-(either because they are upgraded to a newer version, or because they are
-plainly erased), and then reinstall the repackaged RPMs, thereby restoring
-the system to a previous (hopefully more stable) state.
-
-urpmi.recover has three main functions:
-
-=over 4
-
-=item define a checkpoint
-
-C<urpmi.recover --checkpoint> is used to define a point in your system
-that you consider stable, and to start storing info that will enable you
-to rollback to this state (or to any later state).
-
-=item list installations you've done
-
-C<urpmi.recover --list date> is used to list chronologically all
-installations and upgrades on your system up to the specified date. The
-output format gives them grouped by installation transactions. (This
-option has two variants, C<--list-all> and C<--list-safe>.) Here are some
-examples :
-
-List all installations made during the last day :
-
-    urpmi.recover --list '1 day ago'
-
-List all installations since 7th february 2006 :
-
-    urpmi.recover --list 2006-02-07
-
-List all installations since the checkpoint :
-
-    urpmi.recover --list-safe
-
-Lists all installations and upgrades known to the RPM database :
-
-    urpmi.recover --list-all
-
-=item perform rollbacks
-
-C<urpmi.recover --rollback> is used to roll back installations and
-upgrades to a previous point in the past (at most until your checkpoint.)
-It has two variants :
-
-To roll back until a specified date :
-
-    urpmi.recover --rollback <date>
-
-The date can be a duration (for example "2 hours ago") or a date given
-in YYYY-MM-SS hh:mm format.
-
-To roll back a specified number of transactions :
-
-    urpmi.recover --rollback <number of transactions>
-
-In both cases, be careful not to rollback beyond the checkpoint!
-
-=back
-
-Once you've defined a checkpoint, when you use urpmi, urpme or directly
-rpm to install or remove packages, the older packages will be stored in
-/var/spool/repackage. You thus must make sure you have enough space on
-this partition to store all repackaged RPMs.
-
-Technically, defining a checkpoint is equivalent to writing a file
-/etc/rpm/macros.d/urpmi.recover.macros that overrides the rpm macros
-used to set up the repackaging functionalities of rpm. You can change
-C<%_repackage_dir> there if you want to, if you don't want to store
-repackaged RPMs in /var/spool/repackage.
-
-If you want to disable the repackaging functionality and clean up the
-repackage spool, use C<urpmi.recover --disable>. Warning: rollbacks won't
-be possible anymore.
-
 =head1 Restricted urpmi
 
 urpmi has a "restricted" counterpart: rurpmi. It is similar to urpmi, but
