@@ -1,3 +1,5 @@
+- drop again urpmi.recover 
+  (no more possible since rpm 4.6 which doesn't handle --repackage)
 - library:
   o enhanced doc
 
